[tool.poetry]
name = "streamlit-tarot"
version = "0.1.0"
description = ""
authors = ["CT Wu <ct@shopline.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
pymongo = "^4.6.3"
langchain-google-genai = "^1.0.1"
langchain = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
